# coconutOS

./: .gitignore  Cargo.toml  LICENSE  README.md  mise.toml
.cargo/: config.toml
.claude/: CLAUDE.md  ROADMAP.md
.claude/rules/: architecture.md  code-style.md  commits.md  minimalism.md  safety.md
crates/coconut-boot/: Cargo.toml
crates/coconut-boot/docs/: README.md
crates/coconut-boot/src/: elf.rs  main.rs
crates/coconut-rt/: Cargo.toml
crates/coconut-rt/docs/: README.md
crates/coconut-rt/src/: gpu.rs  io.rs  lib.rs  sys.rs
crates/coconut-shard-gpu/: Cargo.toml
crates/coconut-shard-gpu/docs/: README.md
crates/coconut-shard-gpu/src/: main.rs
crates/coconut-shared/: Cargo.toml
crates/coconut-shared/docs/: README.md
crates/coconut-shared/src/: lib.rs
crates/coconut-supervisor/: Cargo.toml  build.rs  linker.ld
crates/coconut-supervisor/docs/: README.md
crates/coconut-supervisor/src/: acpi.rs  capability.rs  channel.rs  ext2.rs  frame.rs  fs.rs  gdt.rs  gpu.rs  highhalf.rs  idt.rs  iommu.rs  main.rs  pci.rs  pic.rs  pit.rs  pmm.rs  scheduler.rs  serial.rs  shard.rs  syscall.rs  tss.rs  vmm.rs
docs/: architecture.md  building.md  debugging.md  getting-started.md
include/: coconut.h
scripts/: coconut-prof.py  qemu-run.sh
shards/hello-c/: main.c  start.S
shards/llama-inference/: main.c  start.S
shards/llama-pipeline/: main.c  start.S
targets/: shard.ld  x86_64-coconut-shard.json
